<resources>
    <string name="app_name">Laptop Shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Laptop Shop</string>
    <string name="nav_header_subtitle">laptopshop@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_login">Welcome To Laptop Shop</string>

    <!-- Strings related to home screen -->
    <string name="find_caption">Find a laptop that you will love</string>
    <string name="suppliers"> Suppliers Near You</string>
    <string name="img_description">Laptop Image</string>
    <string name="top_selling">Top Selling</string>
    <string name="count">20+</string>
</resources>